Update para junta 15 feb 13

--- a/django/vivilox/vivilox/templates/accounts/profile/client/contest.html
+++ b/django/vivilox/vivilox/templates/accounts/profile/client/contest.html
@@ -31,7 +31,8 @@
                 <ul id="profile_menu">
                     <li><a class="submissions item_menu active_link" href="{% url profile_contest %}">My Contest</a></li>
                     <li><a class="purchased item_menu" href="{% url purchased_images_view %}">Purchased Images</a></li>
-                    <li><a class="notifications " href="{% url feedback_view %}">Notifications</a></li>
+                    <li><a class="notifications " href="{% url feedback_view %}">Private messages
+</a></li>
                 </ul>
             </div>
         </div><!--Span3 ENd-->
