--- a/django/vivilox/vivilox/templates/accounts/profile_artist.html
+++ b/django/vivilox/vivilox/templates/accounts/profile_artist.html
@@ -33,7 +33,8 @@
                 <ul id="profile_menu">
                     <li><a class="store item_menu" href="#my_items">My Store</a></li>
                     <li><a class="submissions item_menu" href="#my_contests">My Submissions</a></li>
-                    <li><a class="notifications item_menu" href="{% url feedback_view %}">Notifications</a></li>
+                    <li><a class="notifications item_menu" href="{% url feedback_view %}">Private messages
+</a></li>
                     <li><a class="purchased item_menu" href="#my_purchased">Purchased Images</a></li>
                 </ul>
             </div>
