--- a/django/vivilox/vivilox/templates/accounts/profile_client.html
+++ b/django/vivilox/vivilox/templates/accounts/profile_client.html
@@ -31,7 +31,8 @@
                 <ul id="profile_menu">
                     <li><a class="submissions item_menu" href="#my_contests">My Contest</a></li>
                     <li><a class="purchased item_menu" href="#my_purchased">Purchased Images</a></li>
-                    <li><a class="notifications " href="{% url feedback_view %}">Notifications</a></li>
+                    <li><a class="notifications " href="{% url feedback_view %}">Private messages
+</a></li>
                 </ul>
             </div>
         </div><!--Span3 ENd-->
