--- a/django/vivilox/vivilox/templates/feedback/feedback.html
+++ b/django/vivilox/vivilox/templates/feedback/feedback.html
@@ -45,7 +45,8 @@
                     {% else %}
                         <li><a class="submissions item_menu" href=" {% url profile_contest %}">My Contest</a></li>
                         <li><a class="purchased item_menu" href="{% url purchased_images_view %}">Purchased Images</a></li>
-                        <li><a class="notifications item_menu active_link" href="">Notifications</a></li>
+                        <li><a class="notifications item_menu active_link" href="">Private messages
+</a></li>
                     {% endif %}
                    
                 </ul>
