--- a/django/vivilox/vivilox/templates/forms/store/add_expedient.html
+++ b/django/vivilox/vivilox/templates/forms/store/add_expedient.html
@@ -6,7 +6,9 @@
 <div class="container">
     <!--  Project Proposals  -->
     <div class="row">
-    <div class="span12"><h3 class='up_item'>Step2: Upload Original Work</h3></div>
+        <div class="span3"><h4 class=''>Step1: Art information</h4></div>
+        <div class="span5"><h3 class='up_item'>Step2: Upload Original Work</h3></div>
+        <div class="span4"><h4 class=''>Step 3: Review and submit.</h4></div>
     </div>
     <div class="row">
         <div class="span6">
