--- a/django/vivilox/vivilox/templates/home/home.html
+++ b/django/vivilox/vivilox/templates/home/home.html
@@ -17,7 +17,7 @@
 	            </div><!--End Row--> 
 
                 <div class="row">
-                    <div class="span12">
+                    <div class="">
                         <div id="wrapper">
                                 <div class="slider-wrapper theme-default">
                                     <div id="slider" class="nivoSlider">
@@ -69,6 +69,7 @@
 
                 </div>
                 <div class="row">
+                    <div class="span6">
                     <h3 class="features-h3-projects">Top Rated Projects</h3>
                         <div class="project-thumb-img">
                         {% for contest in objContest %}
@@ -78,13 +79,32 @@
                                     <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{contest.name}}">
                                 {% endthumbnail %}
                             </a>
-                            <span class="_tooltip" rel="tooltip" data-placement="top" data-original-title="{{ contest.name }}" title="{{ contest.name }}">{{ contest.name|truncatewords:3 }}</span>
+                            <span class="_tooltip" rel="tooltip" data-placement="top" data-original-title="{{ contest.name }}" title="{{ contest.name }}">{{ contest.name|truncatewords:2 }}</span>
                             <a class="view-project" href="{% url contest_details_view contest.id  %}">view details</a>
                             </div>
                         {%empty%}
                            <h3>No Contest</h3>
                         {%endfor%}
                         </div>
+                    </div>
+                    <div class="span6">
+                    <h3 class="features-h3-projects">Top Rated Item from Store</h3>
+                        <div class="project-thumb-img">
+                        {% for item in objStore %}
+                            <div class="span2">
+                            <a href="{% url image_details_view item.id  %}" class="thumb-link-home">
+                                {% thumbnail item.image_sample "140x110" crop="50% center" as im %}
+                                    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{item.name}}">
+                                {% endthumbnail %}
+                            </a>
+                            <span class="_tooltip" rel="tooltip" data-placement="top" data-original-title="{{ item.title }}" title="{{ item.title }}">{{ item.title|truncatewords:3 }}</span>
+                            <a class="view-project" href="{% url image_details_view item.id  %}">view details</a>
+                            </div>
+                        {%empty%}
+                           <h3>No Items</h3>
+                        {%endfor%}
+                        </div>
+                    </div>
                         <a class="more-red" href="{% url all_contest_view %}">View All Projects</a> 
                         <a class="more-rated" href="{% url top_contest_view %}">View All Top Rated Proyects</a>
                 </div><!--End Row--> 
