--- a/django/vivilox/vivilox/templates/accounts/profile/artist/contest.html
+++ b/django/vivilox/vivilox/templates/accounts/profile/artist/contest.html
@@ -33,7 +33,8 @@
                 <ul id="profile_menu">
                     <li><a class="store item_menu" href="{% url my_store_view %}">My Store</a></li>
                     <li><a class="submissions item_menu active_link" href="{% url profile_contest %}">My Submissions</a></li>
-                    <li><a class="notifications item_menu" href="{% url feedback_view %}">Notifications</a></li> 
+                    <li><a class="notifications item_menu" href="{% url feedback_view %}">Private messages
+</a></li> 
                     <li><a class="purchased item_menu " href="{% url purchased_images_view %}">Purchased Images</a></li>                </ul>
                 </ul>
             </div>
