--- a/django/vivilox/vivilox/templates/accounts/profile/artist/purchased_images.html
+++ b/django/vivilox/vivilox/templates/accounts/profile/artist/purchased_images.html
@@ -30,8 +30,11 @@
             <div class="listing">
                 <ul id="profile_menu">
                     <li><a class="store item_menu" href="{% url my_store_view %}">My Store</a></li>
+
                     <li><a class="submissions item_menu " href="{% url profile_contest %}">My Submissions</a></li>
-                    <li><a class="notifications item_menu" href="{% url feedback_view %}">Notifications</a></li>
+                    
+                    <li><a class="notifications item_menu" href="{% url feedback_view %}">Private messages
+</a></li>
                     <li><a class="purchased item_menu active_link" href="{% url purchased_images_view %}">Purchased Art</a></li>                </ul>
                 </ul>
             </div>
@@ -55,8 +58,9 @@
                             {% if p.paid %}
                                  <a class="download-files" href="{% url download_expedient_view p.item.id %}">Download</a>
                                 {% if p.released %}
-                                    <h2>Liberated</h2>
+                                    <h2>You have release funds for this image</h2>
                                 {% else %}
+                                    Agree that the purchased images are OK
                                     <a class="download-files" href="{% url liberate_item_view p.item.id %}" title="">Liberate</a>
                                 {% endif %}
                             
