--- a/django/vivilox/vivilox/templates/accounts/profile/client/purchased_images.html
+++ b/django/vivilox/vivilox/templates/accounts/profile/client/purchased_images.html
@@ -31,7 +31,8 @@
                 <ul id="profile_menu">
                     <li><a class="submissions item_menu " href="{% url profile_contest %}">My Contest</a></li>
                     <li><a class="purchased item_menu active_link" href=" {% url purchased_images_view %} ">Purchased Images</a></li>
-                    <li><a class="notifications " href="{% url feedback_view %}">Notifications</a></li>
+                    <li><a class="notifications " href="{% url feedback_view %}">Private messages
+</a></li>
                 </ul>
             </div>
         </div><!--Span3 ENd-->
@@ -51,14 +52,41 @@
                             <span>Date purchase: {{ p.date|date:"M d, Y" }} </span>
                         </div>
                         <div class="download-prod">
-                            <a class="download-files" href="#">Download</a>
+                            {% if p.paid %}
+                                 <a class="download-files" href="{% url download_expedient_view p.item.id %}">Download</a>
+                                {% if p.released %}
+                                    <h2>You have release funds for this image</h2>
+                                {% else %}
+                                    Agree that the purchased images are OK
+                                    <a class="download-files" href="{% url liberate_item_view p.item.id %}" title="">Liberate</a>
+                                {% endif %}
+                            
+                            {% else %}
+                                <a class="pay-now" href="{% url pay_item_view p.item.id %}" title="">Pay Now</a>
+                            {% endif %}
+
+                           
+                           
                         </div>
                     </div>
                 {% empty %}
-                    <h3>No purchased items</h3>
+                    <h4>You have no purchases. Check out the <a href=" {% url store_view %} ">VIVILOX Concept Art Store!</a>  </h4>
                 {% endfor %}
             </div>
-	</div>
+            <div class="pagination">
+                <span class="step-links">
+                    <ul>
+                    {% for pag in purchased.paginator.page_range %}
+                        <li>
+                            <a href="?page={{pag}}">{{pag}}</a>
+
+                        </li>   
+                    {% endfor %}
+                    </ul>
+                </span>
+            </div>
+
+    </div>
 </div>
 {% endblock %}
 
