--- a/django/vivilox/vivilox/templates/store/add_item_thanks.html
+++ b/django/vivilox/vivilox/templates/store/add_item_thanks.html
@@ -4,10 +4,12 @@
 
 {% block content %}
 <div class="container">
-    	<div class="row">
-        <div class="span12">
-            <h3>Step 3: Review and submit.</h3>
-        </div>
+	<div class="row">
+        <div class="span3"><h4 class=''>Step1: Art information</h4></div>
+        <div class="span4"><h4 class=''>Step2: Upload Original Work</h4></div>
+        <div class="span5"><h3 class='up_item'>Step 3: Review and submit.</h3></div>
+    </div>
+
         <div class="row">
             <div class="span12">
                 <h3 class="">Thank you {{user.First_Name}} your art is now in the store!</h3>     <!--  Project Full Details  -->
