update last junta 15/02/2013

--- a/django/vivilox/vivilox/templates/contest/contest_details.html
+++ b/django/vivilox/vivilox/templates/contest/contest_details.html
@@ -37,6 +37,9 @@
                         </span>
                      </div>
             </div>
+            
+
+                
             {% if objContest.finished %}
                 <div class="row">
                     <div class="span12">
@@ -47,6 +50,8 @@
                 </div>  
             {% endif %}
             
+
+
             <div class="row">
                 <div class="span5">
                     <h4>Contest launched by: <a href="{% url all_contest_buyer_view objContest.user.id %}">{{ objContest.user.first_name }} {{ objContest.user.last_name }}</h4></a>
@@ -58,7 +63,14 @@
                 {% if not objContest.finished %}
                     <div class="join-contest-btn offset5 span2"><a class="join-yellow" href="{% url add_new_proposal_form objContest.id  %}">Add Proposal</a></div>
                 {% endif %}
-            </div>      
+            </div>  
+             {% if objContest.user == user %}
+                <div class="row">
+                    <div class="span12">
+                        <a class="edit_contest" href=" {% url edit_contest_new_view objContest.id %} ">Edit Contest Info</a>
+                    </div>
+                </div>
+            {% endif %}    
             <!--  Project Full Details  -->
 
               <div class="project-details row">
