Update from server CSS and img

--- a/django/vivilox/vivilox/templates/forms/store/add_item_store.html
+++ b/django/vivilox/vivilox/templates/forms/store/add_item_store.html
@@ -5,10 +5,10 @@
 {% block content %}
 <div class="container">
     <!--  Project Proposals  -->
-    <div class="row">
-        <div class="span4"><h3 class='up_item'>Step1: Art information</h3></div>
-        <div class="span4"><h4 class=''>Step2: Upload Original Work</h4></div>
-        <div class="span4"><h4 class=''>Step 3: Review and submit.</h4></div>
+    <div class="row steps-str">
+        <div class="span4 step1"><h3 class='up_item'><span>Step1: Art information</span></h3></div>
+        <div class="span4 step2"><h4 class=''><span>Step2: Upload Original Work</span></h4></div>
+        <div class="span4 step3"><h4 class=''><span>Step 3: Review and submit.</span></h4></div>
     </div>
     <div class="row">
     <div class="span12">
