--- a/django/vivilox/vivilox/templates/forms/store/add_expedient.html
+++ b/django/vivilox/vivilox/templates/forms/store/add_expedient.html
@@ -5,10 +5,10 @@
 {% block content %}
 <div class="container">
     <!--  Project Proposals  -->
-    <div class="row">
-        <div class="span3"><h4 class=''>Step1: Art information</h4></div>
-        <div class="span5"><h3 class='up_item'>Step2: Upload Original Work</h3></div>
-        <div class="span4"><h4 class=''>Step 3: Review and submit.</h4></div>
+     <div class="row steps-str">
+        <div class="span4 step1"><h4 class=''><span>Step1: Art information</span></h4></div>
+        <div class="span4 step2"><h3 class='up_item'><span>Step2: Upload Original Work</span></h3></div>
+        <div class="span4 step3"><h4 class=''><span>Step 3: Review and submit.</span></h4></div>
     </div>
     <div class="row">
         <div class="span6">
