--- a/django/vivilox/vivilox/templates/home/home.html
+++ b/django/vivilox/vivilox/templates/home/home.html
@@ -86,6 +86,8 @@
                            <h3>No Contest</h3>
                         {%endfor%}
                         </div>
+                        <a class="more-red" href="{% url all_contest_view %}">View All Projects</a> 
+                        <a class="more-rated" href="{% url top_contest_view %}">View All Top Rated Proyects</a>
                     </div>
                     <div class="span6">
                     <h3 class="features-h3-projects">Top Rated Item from Store</h3>
@@ -104,9 +106,10 @@
                            <h3>No Items</h3>
                         {%endfor%}
                         </div>
-                    </div>
                         <a class="more-red" href="{% url all_contest_view %}">View All Projects</a> 
                         <a class="more-rated" href="{% url top_contest_view %}">View All Top Rated Proyects</a>
+                    </div>
+                        
                 </div><!--End Row--> 
 	        </div><!--End Container-->
 
@@ -124,16 +127,10 @@
   </div>
 </div>
 <!-- / Modal -->
-
-
-
 {% endblock %}
-
 {% block footer_extrajs %}
-<script src=" {{ STATIC_URL }}js/jquery.nivo.slider.js" ></script>
+<script src="{{ STATIC_URL }}js/plugins.js" ></script>
 <script>
-    $(document).on("ready",inicio);
-    
     function inicio()
     {
         $("._tooltip").tooltip();
@@ -148,9 +145,6 @@
         modalVideo.find(".modal-body").html(videoTxt);
         modalVideo.modal('show');
     }
-
-
-
-
+    $(document).on("ready",inicio);
 </script>
 {% endblock footer_extrajs %}
