--- a/django/vivilox/vivilox/templates/contest/view_all.html
+++ b/django/vivilox/vivilox/templates/contest/view_all.html
@@ -49,7 +49,7 @@
 						<a class="join-yellow" href="{% url contest_details_view contest.id  %}">
 							
 							{% if contest.finished or user.profile.user_type == "1" %}
-		            			Viw Contest	
+		            			View Contest	
 		            		{% else %}
 		            			Join Contest
 		            		{% endif %}
