--- a/django/vivilox/vivilox/templates/accounts/profile/artist/purchased_images.html
+++ b/django/vivilox/vivilox/templates/accounts/profile/artist/purchased_images.html
@@ -58,18 +58,20 @@
                             {% if p.paid %}
                                  <a class="download-files" href="{% url download_expedient_view p.item.id %}">Download</a>
                                 {% if p.released %}
-                                    <h2>You have release funds for this image</h2>
+                                    <h5>You have release funds for this image</h5>
                                 {% else %}
-                                    Agree that the purchased images are OK
-                                    <a class="download-files" href="{% url liberate_item_view p.item.id %}" title="">Liberate</a>
+                                <div class="control-group">
+                                    <div class="controls">
+                                        <label class="checkbox">
+                                            <input type="checkbox" name="submit_liberate" class="submit_liberate"> <span class="lib_acept">Agree that the purchased images are OK</span>
+                                        </label>
+                                        <a class="download-files" href="{% url liberate_item_view p.item.id %}" title="">Liberate</a>
+                                    </div>
+                                </div>
                                 {% endif %}
-                            
                             {% else %}
                                 <a class="pay-now" href="{% url pay_item_view p.item.id %}" title="">Pay Now</a>
                             {% endif %}
-
-                           
-                           
                         </div>
                     </div>
                 {% empty %}
@@ -82,7 +84,6 @@
                     {% for pag in purchased.paginator.page_range %}
                         <li>
                             <a href="?page={{pag}}">{{pag}}</a>
-
                         </li>   
                     {% endfor %}
                     </ul>
@@ -92,4 +93,25 @@
 	</div>
 </div>
 {% endblock %}
+{% block footer_extrajs %}
+<script>
+function liberate_item(e){
+   var btnItem = $(this);
+   var cont = btnItem.parent(".controls");
+   var iCheck = cont.find(".submit_liberate");
+
+   if (! iCheck.is(":checked")){
+    e.preventDefault();
+    alert("Please, accept the message.");
+   }
+}
+function inicio(){
+    $(".download-files").on("click",liberate_item);
+}    
+
+$(document).on("ready",inicio);
+    
+</script>
+    
+{% endblock footer_extrajs %}
 
