--- a/django/vivilox/vivilox/templates/contest/contest_details.html
+++ b/django/vivilox/vivilox/templates/contest/contest_details.html
@@ -181,7 +181,7 @@
                                     <p>    
                                         {% if user.profile.user_type == "1" and user == objContest.user and not objContest.finished %}
                                             {% if not proposal.discarded %}
-                                                <a class='feedback' href="{% url feedback_add user.id,proposal.user.id,objContest.id,proposal.id %}">Add FeedBack</a>
+                                                <a class='feedback' href="{% url feedback_add user.id,proposal.user.id,objContest.id,proposal.id %}">Contact Artist</a>
                                                 <a id="id_winner" class='winner' href="{% url winner_view user.id,proposal.user.id,objContest.id,proposal.id %}">Flag as Winner</a>
                                             {% endif %}
                                         {% endif %}
