--- a/django/vivilox/vivilox/templates/forms/accounts/login.html
+++ b/django/vivilox/vivilox/templates/forms/accounts/login.html
@@ -14,7 +14,7 @@
 	{{ form.as_p }}
 
 	<a class="forgot" href="#">Forgot your password?</a>
-	<a class="register" href="#">Not a member? Register FREE</a>
+	<a class="register" href="/accounts/new/">Not a member? Register FREE</a>
 	<input class="red" type="submit" value="Login">
 	<input type="hidden" name="next" value="{{ next|escape }}" >
 </form>
