update of server CSS

--- a/django/vivilox/vivilox/templates/bases/main_base.html
+++ b/django/vivilox/vivilox/templates/bases/main_base.html
@@ -114,7 +114,7 @@
             <h4 class="fb">Facebook</h4>
              <div id="fb-root"></div>
                 
-                <iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2FVIVILOXcom%2F366030400153958%3Ffref%3Dts&amp;width=200&amp;height=290&amp;show_faces=true&amp;colorscheme=dark&amp;stream=false&amp;border_color&amp;header=true&amp;appId=123366741102352" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:290px;" allowTransparency="true"></iframe>
+                <iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FVIVILOXcom%2F366030400153958&amp;width=200&amp;height=258&amp;show_faces=true&amp;colorscheme=dark&amp;stream=false&amp;border_color=%23393942&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:258px;" allowTransparency="true"></iframe>
             
             <div id="icons">
 
