--- a/django/vivilox/vivilox/templates/message/message.html
+++ b/django/vivilox/vivilox/templates/message/message.html
@@ -7,7 +7,7 @@
 	<div class="row">
         	<!--  Project Full Details  -->
               <h3>{{title}}</h3>
-               <div class="row border-top">
+               <div class="border-top span12">
                     <p>
                       {% autoescape off %}
                         {{message}}
