--- a/django/vivilox/vivilox/templates/contest/view_all.html
+++ b/django/vivilox/vivilox/templates/contest/view_all.html
@@ -32,9 +32,9 @@
 		</div>
 	</div>
            <!--  Contest list -->
-	<div id="all_contest" class='row'>
+	<div id="all_contest" >
            {% for contest in objContest %}
-           		<div class="project-list row">
+           		<div class="project-list">
            		<div class="row">
            			<div class="span10">
 						<h3>
@@ -96,7 +96,7 @@
 	        {% empty %}
 	        	<h3>No Contest</h3>  
 	        {% endfor %}
- 		
+ 		<div class="row">
  		<div class="span12">
 		        
 	    	<div class="pagination pagination-small pagination-centered">
@@ -124,6 +124,7 @@
                     </ul>
 
             </div>
+        </div>
  	</div> <!-- End Row -->          
 </div><!--End Container-->
 
