--- a/django/vivilox/vivilox/templates/store/store.html
+++ b/django/vivilox/vivilox/templates/store/store.html
@@ -74,6 +74,7 @@
             {% endfor %}
         </div>
 
+<div class="row">
 <div class="span12">
         <div class="pagination">
             <span class="step-links">
@@ -87,7 +88,7 @@
             </span>
         </div>
 </div>
-       
+</div>       
         </div>
         <!--End Container-->
 
