--- a/django/vivilox/vivilox/templates/feedback/feedback.html
+++ b/django/vivilox/vivilox/templates/feedback/feedback.html
@@ -109,7 +109,8 @@
                     </div>
                     <hr>
                 {% empty %}
-                    <h1>No notifications</h1> 
+                    <p>Sorry, you don't have any new feedback. 
+In the meantime check out more <a href="/contest.all/">CONTESTS!</a></p>
                 {% endfor %}
             </div>
             </div> 
@@ -136,7 +137,8 @@
                     {% endautoescape %}
                     <hr>
                 {% empty %}
-                    <h1>No notifications</h1> 
+                    <p>Sorry, you don't have any new feedback. 
+In the meantime check out more <a href="/contest.all/">CONTESTS!</a></p>
                 {% endfor %}
             </div>
 
